# polynomial

./: .gitignore
cpp/: CMakeLists.txt  Justfile  compile_commands.json
cpp/examples/: CMakeLists.txt  hello.cpp
cpp/src/: polynomial.cppm
julia/: Project.toml
julia/src/: Polynomial.jl
rust/: Cargo.toml  rust-toolchain.toml
rust/src/: lib.rs
